--- a/index.html
+++ b/index.html
@@ -129,13 +129,15 @@
           </p>
 
           <h5 class="pt-5 pb-3">「スキル」</h5>
-          <h6>マークアップ言語</h6>
-          <table class="m-3">
+          <table class="m-3" style="font-size: 1.2rem">
             <tr>
-              <th>スキル</th>
-              <th>レベル</th>
-              <th>経験年数</th>
+              <th scope="col">>スキル</th>
+              <th scope="col">>レベル</th>
+              <th scope="col">>経験年数</th>
             </tr>
+            <tr>
+              <th class="fw-bold" colspan="3">マークアップ言語</th>
+            </tr>           
             <tr>
               <td>HTML5</td>
               <td>★★★★☆</td>
@@ -146,14 +148,9 @@
               <td>★★★☆☆</td>
               <td>2年</td>
             </tr>
-          </table>
-          <h6>フロントエンド</h6>
-          <table class="m-3">
             <tr>
-              <th>スキル</th>
-              <th>レベル</th>
-              <th>経験年数</th>
-            </tr>
+              <th class="fw-bold" colspan="3">フロントエンド</th>
+            </tr>           
             <tr>
               <td>JavaScript</td>
               <td>★★★★☆</td>
@@ -169,14 +166,9 @@
               <td>★☆☆☆☆</td>
               <td>学習中</td>
             </tr>
-          </table>
-          <h6>バックエンド</h6>
-          <table class="m-3">
             <tr>
-              <th>スキル</th>
-              <th>レベル</th>
-              <th>経験年数</th>
-            </tr>
+              <th class="fw-bold" colspan="3">バックエンド</th>
+            </tr>   
             <tr>
               <td>Node.js</td>
               <td>★★☆☆☆</td>
@@ -187,14 +179,9 @@
               <td>★★☆☆☆</td>
               <td>～1年</td>
             </tr>
-          </table>
-          <h6>データサイエンス</h6>
-          <table class="m-3">
             <tr>
-              <th>スキル</th>
-              <th>レベル</th>
-              <th>経験年数</th>
-            </tr>
+              <th class="fw-bold" colspan="3">データサイエンス</th>
+            </tr>   
             <tr>
               <td>Python(データ分析)</td>
               <td>★★☆☆☆</td>
