--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
           </p>
 
           <h5 class="pt-5 pb-3">「スキル」</h5>
-          <table class="m-3" style="font-size: 1.2rem">
+          <table class="m-3 pe-3">
             <tr>
               <th scope="col">>スキル</th>
               <th scope="col">>レベル</th>
               <th scope="col">>経験年数</th>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3">マークアップ言語</th>
+              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">マークアップ言語</th>
             </tr>           
             <tr>
               <td>HTML5</td>
@@ -149,7 +149,7 @@
               <td>2年</td>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3">フロントエンド</th>
+              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">フロントエンド</th>
             </tr>           
             <tr>
               <td>JavaScript</td>
@@ -167,7 +167,7 @@
               <td>学習中</td>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3">バックエンド</th>
+              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">バックエンド</th>
             </tr>   
             <tr>
               <td>Node.js</td>
@@ -180,7 +180,7 @@
               <td>～1年</td>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3">データサイエンス</th>
+              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">データサイエンス</th>
             </tr>   
             <tr>
               <td>Python(データ分析)</td>
