--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </p>
 
           <h5 class="pt-5 pb-3">「スキル」</h5>
-          <table class="m-3 pe-3">
+          <table class="m-3" style="width: 60%">
             <tr>
               <th scope="col">>スキル</th>
               <th scope="col">>レベル</th>
