--- a/index.html
+++ b/index.html
@@ -136,68 +136,68 @@
               <th scope="col">>経験年数</th>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">マークアップ言語</th>
+              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">マークアップ言語</th>
             </tr>           
-            <tr>
+            <tr class="px-3">
               <td>HTML5</td>
               <td>★★★★☆</td>
               <td>2年</td>
             </tr>
-            <tr>
+            <tr class="px-3">
               <td>CSS3</td>
               <td>★★★☆☆</td>
               <td>2年</td>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">フロントエンド</th>
+              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">フロントエンド</th>
             </tr>           
-            <tr>
+            <tr class="px-3">
               <td>JavaScript</td>
               <td>★★★★☆</td>
               <td>1～2年</td>
             </tr>
-            <tr>
+            <tr class="px-3">
               <td>React.js</td>
               <td>★★★☆☆</td>
               <td>1～2年</td>
             </tr>
-            <tr>
+            <tr class="px-3">
               <td>typeScript</td>
               <td>★☆☆☆☆</td>
               <td>学習中</td>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">バックエンド</th>
+              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">バックエンド</th>
             </tr>   
-            <tr>
+            <tr class="px-3">
               <td>Node.js</td>
               <td>★★☆☆☆</td>
               <td>～1年</td>
             </tr>
-            <tr>
+            <tr class="px-3">
               <td>MySQL</td>
               <td>★★☆☆☆</td>
               <td>～1年</td>
             </tr>
             <tr>
-              <th class="fw-bold" colspan="3" style="font-size: 1.2rem">データサイエンス</th>
+              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">データサイエンス</th>
             </tr>   
             <tr>
-              <td>Python(データ分析)</td>
+              <td class="px-3">Python(データ分析)</td>
               <td>★★☆☆☆</td>
               <td>～1年</td>
             </tr>
-            <tr>
+            <tr class="px-3">
               <td>Numpy</td>
               <td>★☆☆☆☆</td>
               <td>学習中</td>
             </tr>
-            <tr>
+            <tr class="px-3">
               <td>Pandas</td>
               <td>★☆☆☆☆</td>
               <td>学習中</td>
             </tr>
-            <tr>
+            <tr class="px-3">
               <td>Matplotlib/Seaborn</td>
               <td>★☆☆☆☆</td>
               <td>学習中</td>
