--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <th scope="col">>経験年数</th>
             </tr>
             <tr>
-              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">マークアップ言語</th>
+              <th class="fw-bold pt-2" colspan="3" style="font-size: 1.1rem">マークアップ言語</th>
             </tr>           
             <tr class="px-3">
               <td>HTML5</td>
@@ -149,7 +149,7 @@
               <td>2年</td>
             </tr>
             <tr>
-              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">フロントエンド</th>
+              <th class="fw-bold pt-2" colspan="3" style="font-size: 1.1rem">フロントエンド</th>
             </tr>           
             <tr class="px-3">
               <td>JavaScript</td>
@@ -167,7 +167,7 @@
               <td>学習中</td>
             </tr>
             <tr>
-              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">バックエンド</th>
+              <th class="fw-bold pt-2" colspan="3" style="font-size: 1.1rem">バックエンド</th>
             </tr>   
             <tr class="px-3">
               <td>Node.js</td>
@@ -180,10 +180,10 @@
               <td>～1年</td>
             </tr>
             <tr>
-              <th class="fw-bold pb-2" colspan="3" style="font-size: 1.1rem">データサイエンス</th>
+              <th class="fw-bold pt-2" colspan="3" style="font-size: 1.1rem">データサイエンス</th>
             </tr>   
-            <tr>
-              <td class="px-3">Python(データ分析)</td>
+            <tr class="px-3">
+              <td>Python(データ分析)</td>
               <td>★★☆☆☆</td>
               <td>～1年</td>
             </tr>
